# CMakeLists.txt for webrtc engine.
#
# Copyright 2014 Yegor Mazur <yegor.mazur@gmail.com>
#
# This file is part of Melange.
#
# Melange is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Melange is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with Melange.  If not, see <http://www.gnu.org/licenses/>.

cmake_minimum_required (VERSION 2.8)

set(SOURCES
	#voice_engine
	${WRTC_ROOT}/webrtc/voice_engine/channel.cc
	${WRTC_ROOT}/webrtc/voice_engine/channel_manager.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_base_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/monitor_module.cc
	${WRTC_ROOT}/webrtc/voice_engine/output_mixer.cc
	${WRTC_ROOT}/webrtc/voice_engine/output_mixer_internal.cc
	${WRTC_ROOT}/webrtc/voice_engine/shared_data.cc
	${WRTC_ROOT}/webrtc/voice_engine/statistics.cc
	${WRTC_ROOT}/webrtc/voice_engine/transmit_mixer.cc
	${WRTC_ROOT}/webrtc/voice_engine/utility.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_audio_processing_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_base_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_call_report_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_codec_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_dtmf_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/dtmf_inband.cc
	${WRTC_ROOT}/webrtc/voice_engine/dtmf_inband_queue.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_encryption_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_external_media_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_file_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_hardware_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_neteq_stats_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_network_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_rtp_rtcp_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_video_sync_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voe_volume_control_impl.cc
	${WRTC_ROOT}/webrtc/voice_engine/voice_engine_impl.cc
	#common_audio
	${WRTC_ROOT}/webrtc/common_audio/resampler/resampler.cc
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/auto_corr_to_refl_coef.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/auto_correlation.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/complex_bit_reverse.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/complex_fft.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/copy_set_operations.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/cross_correlation.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/division_operations.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/dot_product_with_scale.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/downsample_fast.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/energy.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/filter_ar.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/filter_ar_fast_q12.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/filter_ma_fast_q12.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/get_hanning_window.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/get_scaling_square.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/ilbc_specific_functions.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/levinson_durbin.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/lpc_to_refl_coef.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/min_max_operations.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/randomization_functions.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/real_fft.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/refl_coef_to_lpc.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/resample.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/resample_48khz.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/resample_by_2.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/resample_by_2_internal.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/resample_fractional.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/spl_init.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/spl_sqrt.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/spl_sqrt_floor.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/spl_version.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/splitting_filter.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/sqrt_of_one_minus_x_squared.c
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/vector_scaling_operations.c
	${WRTC_ROOT}/webrtc/common_audio/vad/vad_core.c
	${WRTC_ROOT}/webrtc/common_audio/vad/vad_filterbank.c
	${WRTC_ROOT}/webrtc/common_audio/vad/vad_gmm.c
	${WRTC_ROOT}/webrtc/common_audio/vad/vad_sp.c
	${WRTC_ROOT}/webrtc/common_audio/vad/webrtc_vad.c
	#modules
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/recin.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/rtcp.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/normal.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/peak_detection.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/preemptive_expand.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/recout.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/rtp.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/set_fs.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/expand.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/unmute_signal.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/mcu_reset.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/mute_signal.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/signal_mcu.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/correlator.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/min_distortion.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/dtmf_tonegen.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/accelerate.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/bufstats_decision.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/mcu_dsp_common.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/webrtc_neteq.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/split_and_insert.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/merge.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/bgn_update.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/mcu_address_init.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/cng_internal.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/dtmf_buffer.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/random_vector.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/packet_buffer.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/automode.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/codec_db.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/dsp.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/dsp_helpfunctions.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/mix_voice_unvoice.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_g7291.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_celt.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_codec_database.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_g7221c.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_opus.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_g729.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_gsmfr.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_dtmf_detection.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_speex.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_resampler.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_amrwb.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_ilbc.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_pcma.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_red.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_cng.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_g722.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_generic_codec.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_dtmf_playout.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_amr.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_g7221.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_isac.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_neteq.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_pcm16b.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/audio_coding_module_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/acm_pcmu.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/audio_decoder_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/audio_decoder.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/comfort_noise.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/payload_splitter.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/expand.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/background_noise.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/packet_buffer.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/normal.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/neteq_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/audio_multi_vector.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/delay_manager.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/neteq.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/dtmf_buffer.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/buffer_level_filter.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/post_decode_vad.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/statistics_calculator.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/decoder_database.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/audio_vector.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/timestamp_scaler.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/preemptive_expand.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/merge.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/rtcp.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/tools/rtp_generator.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/tools/input_audio_file.cc
	#${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/tools/neteq_rtpplay.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/time_stretch.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/dsp_helper.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/decision_logic_normal.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/decision_logic_fax.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/accelerate.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/random_vector.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/delay_peak_detector.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/decision_logic.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/dtmf_tone_generator.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq4/sync_buffer.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/g722/g722_encode.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/g722/g722_interface.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/g722/g722_decode.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/g711/g711.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/g711/g711_interface.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/cng/webrtc_cng.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/pcm16b/pcm16b.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/abs_quant.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/abs_quant_loop.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/augmented_cb_corr.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/bw_expand.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_construct.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_mem_energy.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_mem_energy_augmentation.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_mem_energy_calc.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_search.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_search_core.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/cb_update_best_index.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/chebyshev.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/comp_corr.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/constants.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/create_augmented_vec.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/decoder_interpolate_lsf.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/decode_residual.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/do_plc.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/energy_inverse.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/enhancer.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/enhancer_interface.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/enh_upsample.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/filtered_cb_vecs.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/frame_classify.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/gain_dequant.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/gain_quant.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/get_cd_vec.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/get_lsp_poly.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/get_sync_seq.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/hp_input.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/hp_output.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/ilbc.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/ilbc_decode.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/ilbc_encode.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/index_conv_dec.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/index_conv_enc.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/init_decode.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/init_encode.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/interpolate.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/interpolate_samples.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lpc_encode.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lsf_check.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lsf_interpolate_to_poly_dec.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lsf_interpolate_to_poly_enc.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lsf_to_lsp.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lsf_to_poly.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/lsp_to_lsf.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/my_corr.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/nearest_neighbor.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/pack_bits.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/poly_to_lsf.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/poly_to_lsp.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/refiner.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/simple_interpolate_lsf.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/simple_lpc_analysis.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/simple_lsf_dequant.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/simple_lsf_quant.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/smooth.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/smooth_out_data.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/sort_sq.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/split_vq.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/state_construct.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/state_search.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/swap_bytes.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/unpack_bits.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/vq3.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/vq4.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/window32_w32.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/xcorr_coef.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/arith_routines.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/arith_routines_hist.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/arith_routines_logist.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/bandwidth_estimator.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/decode.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/decode_bwe.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/decode_plc.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/encode.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/entropy_coding.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/fft.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/filterbanks.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/filterbank_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/filters.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/initialize.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/isacfix.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/lattice.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/lattice_c.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/lpc_masking_model.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/lpc_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/pitch_estimator.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/pitch_filter.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/pitch_filter_c.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/pitch_gain_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/pitch_lag_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/spectrum_ar_model_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/fix/source/transform.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/arith_routines.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/arith_routines_hist.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/arith_routines_logist.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/bandwidth_estimator.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/crc.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/decode.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/decode_bwe.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/encode.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/encode_lpc_swb.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/entropy_coding.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/fft.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/filterbanks.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/filterbank_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/filter_functions.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/intialize.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/isac.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/lattice.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/lpc_analysis.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/lpc_gain_swb_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/lpc_shape_swb12_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/lpc_shape_swb16_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/lpc_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/pitch_estimator.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/pitch_filter.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/pitch_gain_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/pitch_lag_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/spectrum_ar_model_tables.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/source/transform.c
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/util/utility.c
	${WRTC_ROOT}/webrtc/modules/audio_conference_mixer/source/audio_frame_manipulator.cc
	${WRTC_ROOT}/webrtc/modules/audio_conference_mixer/source/audio_conference_mixer_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_conference_mixer/source/time_scheduler.cc
	${WRTC_ROOT}/webrtc/modules/audio_conference_mixer/source/level_indicator.cc
	${WRTC_ROOT}/webrtc/voice_engine/level_indicator.cc
	${WRTC_ROOT}/webrtc/modules/audio_device/audio_device_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_device/linux/audio_device_utility_linux.cc
	${WRTC_ROOT}/webrtc/modules/audio_device/linux/audio_device_alsa_linux.cc
	${WRTC_ROOT}/webrtc/modules/audio_device/linux/audio_mixer_manager_pulse_linux.cc
	${WRTC_ROOT}/webrtc/modules/audio_device/linux/audio_device_pulse_linux.cc
	${WRTC_ROOT}/webrtc/modules/audio_device/linux/latebindingsymboltable_linux.cc
	${WRTC_ROOT}/webrtc/modules/audio_device/linux/audio_mixer_manager_alsa_linux.cc
	${WRTC_ROOT}/webrtc/modules/audio_device/linux/alsasymboltable_linux.cc
	${WRTC_ROOT}/webrtc/modules/audio_device/linux/pulseaudiosymboltable_linux.cc
	${WRTC_ROOT}/webrtc/modules/audio_device/audio_device_buffer.cc
	${WRTC_ROOT}/webrtc/modules/audio_device/audio_device_generic.cc
	${WRTC_ROOT}/webrtc/modules/audio_device/audio_device_utility.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/cng/cng_helpfuns.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/noise_suppression_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_processing/audio_buffer.cc
	${WRTC_ROOT}/webrtc/modules/audio_processing/gain_control_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_processing/aec/aec_core.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/aec/aec_rdft.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/aec/aec_core_sse2.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/aec/aec_resampler.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/aec/aec_rdft_sse2.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/aec/echo_cancellation.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/agc/digital_agc.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/agc/analog_agc.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/ns/ns_core.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/ns/noise_suppression.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/ns/nsx_core.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/ns/noise_suppression_x.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/aecm/aecm_core.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/aecm/echo_control_mobile.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/level_estimator_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_processing/voice_detection_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_processing/echo_cancellation_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_processing/echo_control_mobile_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_processing/high_pass_filter_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_processing/utility/ring_buffer.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/utility/fft4g.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/utility/delay_estimator.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/utility/delay_estimator_wrapper.c
	${WRTC_ROOT}/webrtc/modules/audio_processing/audio_processing_impl.cc
	${WRTC_ROOT}/webrtc/modules/audio_processing/processing_component.cc
	${WRTC_ROOT}/webrtc/modules/media_file/source/media_file_impl.cc
	${WRTC_ROOT}/webrtc/modules/media_file/source/media_file_utility.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtcp_sender.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtcp_utility.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/forward_error_correction.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/producer_fec.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_receiver_video.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_payload_registry.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/forward_error_correction_internal.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_sender_audio.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_receiver_audio.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/dtmf_queue.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_sender.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_sender_video.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_format_vp8.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/vp8_partition_aggregator.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtcp_receiver.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtcp_receiver_help.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/ssrc_database.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_receiver_strategy.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/H264/bitstream_parser.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/H264/bitstream_builder.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_rtcp_impl.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/bitrate.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_utility.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/tmmbr_help.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_header_extension.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_packet_history.cc
	${WRTC_ROOT}/webrtc/modules/pacing/paced_sender.cc
	${WRTC_ROOT}/webrtc/modules/utility/source/file_recorder_impl.cc
	${WRTC_ROOT}/webrtc/modules/utility/source/rtp_dump_impl.cc
	${WRTC_ROOT}/webrtc/modules/utility/source/video_frames_queue.cc
	${WRTC_ROOT}/webrtc/modules/utility/source/frame_scaler.cc
	${WRTC_ROOT}/webrtc/modules/utility/source/audio_frame_operations.cc
	${WRTC_ROOT}/webrtc/modules/utility/source/video_coder.cc
	${WRTC_ROOT}/webrtc/modules/utility/source/file_player_impl.cc
	${WRTC_ROOT}/webrtc/modules/utility/source/coder.cc
	${WRTC_ROOT}/webrtc/modules/utility/source/process_thread_impl.cc
	#system_wrappers
	${WRTC_ROOT}/webrtc/system_wrappers/source/thread_posix.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/cpu_features.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/event_posix.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/condition_variable_posix.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/sleep.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/file_impl.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/clock.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/sort.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/tick_util.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/rw_lock_posix.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/critical_section.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/event.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/rw_lock_generic.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/event_tracer.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/logging.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/data_log_c.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/data_log.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/aligned_malloc.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/condition_variable.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/critical_section_posix.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/trace_posix.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/atomic32_posix.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/trace_impl.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/rw_lock.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/cpu_info.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/thread.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/cpu.cc
	${WRTC_ROOT}/webrtc/modules/udp_transport/source/udp_transport_impl.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/list_no_stl.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/map.cc
	${WRTC_ROOT}/webrtc/modules/audio_processing/splitting_filter.cc
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/source/audio_coding_module.cc
	${WRTC_ROOT}/webrtc/system_wrappers/source/cpu_linux.cc
	${WRTC_ROOT}/webrtc/modules/udp_transport/source/udp_socket_manager_wrapper.cc
	${WRTC_ROOT}/webrtc/modules/udp_transport/source/udp_socket_wrapper.cc
	${WRTC_ROOT}/webrtc/modules/udp_transport/source/udp_socket_manager_posix.cc
	${WRTC_ROOT}/webrtc/modules/udp_transport/source/udp_socket_posix.cc
	${WRTC_ROOT}/webrtc/voice_engine/channel_manager_base.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/rtp_receiver.cc
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/source/receiver_fec.cc
	)
	
include_directories(
	${WRTC_ROOT}
	${WRTC_ROOT}/webrtc
	${WRTC_ROOT}/webrtc/common_audio/signal_processing/include
	${WRTC_ROOT}/webrtc/modules/audio_coding/neteq/interface
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/cng/include
	${WRTC_ROOT}/third_party
	${WRTC_ROOT}/webrtc/modules/audio_conference_mixer/interface
	${WRTC_ROOT}/webrtc/modules/audio_coding/main/interface
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/g722/include
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/g711/include
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/pcm16b/include
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/isac/main/interface
	${WRTC_ROOT}/webrtc/modules/audio_coding/codecs/ilbc/interface
	${WRTC_ROOT}/webrtc/modules/audio_device/linux
	${WRTC_ROOT}/webrtc/modules/interface
	${WRTC_ROOT}/webrtc/system_wrappers/interface
	${WRTC_ROOT}/webrtc/modules/utility/interface
	${WRTC_ROOT}/webrtc/common_audio/resampler/include
	${WRTC_ROOT}/webrtc/modules/audio_device/main/interface
	${WRTC_ROOT}/webrtc/modules/rtp_rtcp/interface
	${WRTC_ROOT}/webrtc/modules/audio_processing/include
	${WRTC_ROOT}/webrtc/modules/udp_transport/interface
	${WRTC_ROOT}/webrtc/modules/media_file/interface
	${WRTC_ROOT}/webrtc/modules/audio_device
	${WRTC_ROOT}/webrtc/modules/audio_device/dummy
	${WRTC_ROOT}/webrtc/modules/audio_processing/agc/include
	${WRTC_ROOT}/webrtc/modules/audio_processing/ns/include
	${WRTC_ROOT}/webrtc/modules/audio_processing/aec/include
	${WRTC_ROOT}/webrtc/modules/audio_processing/utility
	${WRTC_ROOT}/webrtc/modules/audio_processing/aecm/include
	${WRTC_ROOT}/webrtc/common_audio/vad/include
	${WRTC_ROOT}/webrtc/system_wrappers/source/spreadsortlib
	${WRTC_ROOT}/webrtc/voice_engine/include
	)
	
add_definitions(
	-DWEBRTC_LINUX
	-DWEBRTC_NS_FLOAT
	-DLINUX_ALSA
	-DLINUX_PULSE
	-DNETEQ_VOICEENGINE_CODECS
	-DWEBRTC_TARGET_PC
	-DWEBRTC_DTMF_DETECTION
	-DWEBRTC_SVNREVISION="n/a"
	-msse2
	)
	
add_library(${WRTC_BUILD_OUTPUT} ${SOURCES})

